--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: 'ShinyBalloon';
+    src: url('assets/fonts/ShinyBalloonDemoRegular.ttf') format('ttf');
+}
+
+
+
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'ShinyBalloon', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
