--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'ShinyBalloon';
     src: url('assets/fonts/ShinyBalloonDemoRegular.ttf') format('ttf');
+    font-display: swap; /* or optional, block, fallback, etc. */
 }
 
 
@@ -35,4 +36,5 @@ h1 {
 #tip-text {
     font-size: 18px;
     color: #eee;
+    font-family: 'ShinyBalloon';
 }
